1st onsho update

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shafiul Portfolio 2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1> <span class="welcome-color">Welcome To</span> </h1>
+            <h1> <span class="my-name-color">Shafiul Islam</span> <span class="my-name-color2">Portfolio</span> </h1>
+            <h3>I am a Computer science Engineer </h3>
+            <p>
+                I'm Graduated from reputed university in Computer Science and engineering.I'm worked at Samsung as a IT Executive in software development depeartment.My main work is web application development.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/" >HIRE ME</a>
+        </div>
+        <div  class="half-width">
+            <img src="images/my-bg-pic-2.png" alt="me">
+        </div>
+    </section>
 </body>
 </html>
