--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
             <img src="images/my-bg-pic-2.png" alt="me">
         </div>
     </section>
+    <section>
+        <div class="half-width">
+            <img src="images/my-bg-pic1.png" alt="my pic">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h1>Become a web developer</h1>
+            <p>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="link-button" href="" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 </html>
