experience item updated

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner section-flex">
         <div class="half-width">
             <h1> <span class="welcome-color">Welcome To</span> </h1>
             <h1> <span class="my-name-color">Shafiul Islam</span> <span class="my-name-color2">Portfolio</span> </h1>
             <h3>I am a Computer science Engineer </h3>
             <p>
-                I'm Graduated from reputed university in Computer Science and engineering.I'm worked at Samsung as a IT Executive in software development depeartment.My main work is web application development.
+                I'm Graduated from reputed university in Computer Science and engineering.I'm worked at softwar firm as a IT Executive in software development depeartment.My main work is web application development.
             </p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/" >HIRE ME</a>
         </div>
@@ -25,7 +25,7 @@
             <img src="images/my-bg-pic-2.png" alt="me">
         </div>
     </section>
-    <section>
+    <section class="side-banner section-flex">
         <div class="half-width">
             <img src="images/my-bg-pic1.png" alt="my pic">
         </div>
@@ -38,5 +38,27 @@
             <a class="link-button" href="" target="_blank">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section>
+        <h1 style="text-align: center;"><u>Experience</u></h1>
+        <div class="bottom-banner section-flex">
+            <div id="border-design-full-stack" class="experience-item half-width">
+                <h2>Full Stack Web Developer</h2>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div id="border-design-junior" class="experience-item half-width">
+                <h2>Junior Web Developer</h2>
+                <h3>2020-2021 | Programming Learner</h3>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+       <p>© Shafiul Islam 2021, a dream Programmer . </p> 
+    </footer>
 </body>
 </html>
